...
        .catch(error => handleLogInErrorsBackEnd(error.code));
      await enterApp();
    }
  }

  return (
    <View style={styles.wrapper} testID={'log_in_page'}>
      <StatusBar translucent={true} backgroundColor="transparent" />
      <Text style={[textStyles.blueJosefinHeading]}>Log In</Text>
      <View style={styles.form}>
        <FormField
          title={'Email'}
          setField={setEmail}
          type={'email'}
          value={email}
          testID={'log_in_page_email'}
        />
        <FormField
          title={'Password'}
          placeholder={''}
          setField={setPassword}
          type={'password'}
          value={password}
          testID={'log_in_page_password'}
        />
        <Text
          style={[textStyles.bluePoppinsBody, styles.hyperlink]}
          onPress={forgotPassword}>
          Forgot your password?
        </Text>
        <Text
          style={[textStyles.bluePoppinsBody, styles.hyperlink]}
          onPress={() => navigation.navigate('SignUp')}>
          New? Create an account
        </Text>
      </View>
      <View style={styles.buttonContainer}>
        <CustomButton
          text={'Log in'}
          onPress={authenticateUser}
          priority={'primary'}
        />
      </View>
    </View>
  );
...
