...
  LocationAlert: () => {
    Alert.alert(AlertMessage.LOCATION.title, AlertMessage.LOCATION.message, [
      {
        text: 'OK',
      },
      {
        text: 'No',
        style: 'cancel',
      },
    ]);
  },

  StorageAlert: tryAgain => {
...
  changeShopAlertV1: (newShopKey, switchShop, globalDispatch) => {
    Alert.alert(
      AlertMessage.CHANGE_SHOP.title,
      AlertMessage.CHANGE_SHOP.message,
      [
        {
          text: 'Yes',
          onPress: () => switchShop(newShopKey, globalDispatch),
        },
        {
          text: 'No',
          style: 'cancel',
        },
...
